--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
           "type": "image/png",
           "purpose": "any maskable"
         }, {
-          "src": "/img/icons/icon-144x144.png",
+          "src": "img/icons/icon-144x144.png",
           "sizes": "144x144",
           "type": "image/png"
         }, {
